--- a/package.json
+++ b/package.json
@@ -2,8 +2,7 @@
   "name": "parcel-project-template",
   "version": "2.0.0",
   "description": "",
-  "homepage": "https://dimitr-remicio.github.io/Filmoteka1
-  ",
+  "homepage": "https://dimitr-remicio.github.io/Filmoteka1",
   "scripts": {
     "start": "parcel src/*.html",
     "build": "parcel build src/*.html --public-url /parcel-project-template/"
