--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "url": "git+https://github.com/Dimitr-Remicio/Filmoteka1.git"
   },
   "keywords": [],
-  "author": "Alexander Repeta <alexander.repeta@gmail.com>",
+  "author": "dimitr remicio <dimitr.darm27@gmail.com>",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/Dimitr-Remicio/Filmoteka1/issues"
