--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "homepage": "https://dimitr-remicio.github.io/Filmoteka1",
   "scripts": {
     "start": "parcel src/*.html",
-    "build": "parcel build src/*.html --public-url /parcel-project-template/"
+    "build": "parcel build src/*.html --public-url /Filmoteka1/"
   },
   "repository": {
     "type": "git",
